added paper link.

--- a/index.html
+++ b/index.html
@@ -118,21 +118,12 @@ href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="https://paper_tbd.pdf"
+                <a href="https://arxiv.org/abs/2406.08545"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                   </span>
                   <span>Paper</span>
-                </a>
-              </span>
-              <span class="link-block">
-                <a href="https://arxiv.org/abs/arxiv_tbd"
-                   class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="ai ai-arxiv"></i>
-                  </span>
-                  <span>arXiv</span>
                 </a>
               </span>
               <!-- Code Link. -->
